@@ -1,12 +1,7 @@
 {
-  "count": 17,
-  "uniques": 11,
+  "count": 12,
+  "uniques": 9,
   "clones": [
-    {
-      "timestamp": "2022-05-09T00:00:00Z",
-      "count": 5,
-      "uniques": 4
-    },
     {
       "timestamp": "2022-05-11T00:00:00Z",
       "count": 2,
